+ #352 (LightBDD.XUnit2)(Change) Obsoleted FeatureFixture constructor that accepts ITestOutputHelper in favour of parameterless ctor
+ #353 (LightBDD.Framework)(Change) Changed StepExecution.Current.Bypass() and StepExecution.Current.IgnoreScenario() to validate that they are called within running scenario

Version 3.8.0
----------------------------------------
+ #338 (LightBDD.Framework)(New) Added ScenarioDescriptionAttribute to decorate scenarios with description. Updated ReportFormatters and ProgressNotifiers to include it when provided.
+ #338 Updated XmlReportFormatterSchema.xsd to v2.2 with support for Scenario Description
+ #344 (LightBDD.Core)(Change) Allowed IReportFormatter and IGlobalResourceSetUp implementations to use LightBDDConfigurationAware base

Version 3.7.0
----------------------------------------
+ #207 (LightBDD.Framework)(Change) Modernised Html Report
+ #207 (LightBDD.Framework)(New) Added ability to overrride CSS styles, Logo and Favicon with cfg.ReportWritersConfiguration().AddFileWriter<HtmlReportFormatter>() method
+ #281 (LightBDD.Core)(New) Added IScenarioSetUp and IScenarioTearDown execution extension interfaces allowing to run scenario set up / tear down when implemented on fixture class
+ #281 (LightBDD.Core)(Change) Exposed IScenario.Fixture property allowing scenario decorators accessing the fixture object
+ #281 (LightBDD.Core)(New) Added ability to register global set up and tear down for resources and activities by using `ExecutionExtensionsConfiguration`
+ #282 (LightBDD.Framework)(Change) Updated Html Report to have collapsible sub-steps being collapsed by default
+ #288 (LightBDD.Core)(Change) Format of non-inline step parameters with <$name> parameter reference
+ #292 (LightBDD.Fixie3)(New) Created LightBDD.Fixie3 project with dependency on fixie 3.x
+ #292 (LightBDD.Fixie2)(Change) Deprecated LightBDD.Fixie2 project in favor of LightBDD.Fixie3